feat : checker 패키지 추가
